--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">The Cuppaa Coffee</a>
+        <a class="navbar-brand" href="home.html">
+          <img class="nav-logo" src="images/logo.png" alt="Logo">   The Cuppaa Coffee
+        </a>
         <button
           class="navbar-toggler"
           type="button"
