--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="home.html">
+        <a class="navbar-brand" href="index.html">
           <img class="nav-logo" src="images/logo.png" alt="Logo">   The Cuppaa Coffee
         </a>
         <button
