--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#about">About Us</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#menu">Menu</a></li>
+            <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
             <li class="nav-item">
               <a class="nav-link" href="#gallery">Gallery</a>
             </li>
@@ -166,7 +166,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-md-3 footer-logo">
-            <img src="/images/logo.png" alt="logo" />
+            <img src="images/logo1.png" alt="logo" />
           </div>
           <div class="col-md-3 footer-links">
             <ul class="list-inline">
