--- a/menu.html
+++ b/menu.html
@@ -146,7 +146,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-md-3 footer-logo">
-            <img src="/images/logo.png" alt="logo" />
+            <img src="images/logo.png" alt="logo" />
           </div>
           <div class="col-md-3 footer-links">
             <ul class="list-inline">
