menu of index is edited with images

--- a/index.html
+++ b/index.html
@@ -123,36 +123,39 @@
         <div class="menu-item card-style">
           <div class="image-wrapper">
             <img
-              src="images/cup-image-menu.png"
+              src="images/irish.png"
               class="img-fluid"
               alt="Menu Item 1"
             />
           </div>
-          <h3>Coffee 1</h3>
+          <h3>Irish Cream Coffee</h3>
+        <p class="price">₹200</p>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="menu-item card-style">
           <div class="image-wrapper">
             <img
-              src="images/cup-image-menu.png"
+              src="images/oreo.png"
               class="img-fluid"
               alt="Menu Item 2"
             />
           </div>
-          <h3>Coffee 2</h3>
+          <h3>Oreo Dream Shake</h3>
+          <p class="price">₹250</p>
         </div>
       </div>
       <div class="col-lg-4">
         <div class="menu-item card-style">
           <div class="image-wrapper">
             <img
-              src="images/cup-image-menu.png"
+              src="images/strawberry.png"
               class="img-fluid"
               alt="Menu Item 3"
             />
           </div>
-          <h3>Coffee 3</h3>
+          <h3>Strawberry Sensation</h3>
+        <p class="price">₹180</p>
         </div>
       </div>
     </div>
